--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  color: rgba(255, 255, 255, 0.836);
+}
+
+body {
+  background-color: rgb(41, 41, 41);
+}
